# FeDa4Fair

./: .gitignore  README.md  pyproject.toml
dashboard/: app.py
src/FeDa4Fair/dataset/: __init__.py  fair_dataset.py  generation.py  partitioning.py
src/FeDa4Fair/metrics/: evaluation.py  fairness.py
src/FeDa4Fair/templates/: datasheet_template.md
src/FeDa4Fair/utils/: data_utils.py  example_utils.py  reporting.py
src/FeDa4Fair/visualization/: __init__.py  plots.py
